--- a/chatbox.css
+++ b/chatbox.css
@@ -61,6 +61,7 @@ body {
   height: 210px;
   line-height: initial;
 }
+/* #frame #sidepanel #profile.expanded .wrap #fullname, */
 #frame #sidepanel #profile.expanded .wrap p {
   margin-top: 20px;
 }
@@ -117,11 +118,13 @@ body {
 #frame #sidepanel #profile .wrap img.offline {
   border: 2px solid #95a5a6;
 }
+#frame #sidepanel #profile .wrap #fullname,
 #frame #sidepanel #profile .wrap p {
   float: left;
   margin-left: 15px;
 }
 @media screen and (max-width: 735px) {
+  #frame #sidepanel #profile .wrap #fullname,
   #frame #sidepanel #profile .wrap p {
     display: none;
   }
@@ -273,6 +276,19 @@ body {
   margin: 0 8px 5px 0;
   padding: 5px 0;
 }
+#frame #sidepanel #profile .wrap #fullname {
+  border: none;
+  margin-bottom: 6px;
+  background: #32465a;
+  border-radius: 3px;
+  color: #f5f5f5;
+  height: 34px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  margin-top: 12px;
+  /* margin-bottom: 20px; */
+
+}
 #frame #sidepanel #profile .wrap #expanded input {
   border: none;
   margin-bottom: 6px;
@@ -290,6 +306,7 @@ body {
   border-top: 1px solid #32465a;
   border-bottom: 1px solid #32465a;
   font-weight: 300;
+  margin-bottom: 10px;
 }
 @media screen and (max-width: 735px) {
   #frame #sidepanel #search {
@@ -325,7 +342,7 @@ body {
   color: #f5f5f5;
 }
 #frame #sidepanel #contacts {
-  height: calc(100% - 177px);
+  height: calc(100% - 203px);
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -432,15 +449,17 @@ body {
   -o-transition: 1s all ease;
   -webkit-transition: 1s all ease;
   transition: 1s all ease;
+  color: #adb5bd;
 }
-#frame #sidepanel #contacts ul li.contact .wrap .meta .preview span {
+#frame #sidepanel #contacts ul li.contact .wrap .meta .preview span { /* You:  */
   position: initial;
   border-radius: initial;
   background: none;
   border: none;
   padding: 0 2px 0 0;
   margin: 0 0 0 1px;
-  opacity: .5;
+  /* opacity: .5; */
+  color: #ffc107;
 }
 #frame #sidepanel #bottom-bar {
   position: absolute;
@@ -594,14 +613,21 @@ body {
   display: inline-block;
   padding: 10px 15px;
   border-radius: 20px;
-  max-width: 205px;
+  /* max-width: 300px; */
+  max-width: 80%;
   line-height: 130%;
+  word-break: break-all;
 }
-@media screen and (min-width: 735px) {
-  #frame .content .messages ul li p {
-    max-width: 300px;
-  }
-}
+/* @media screen and (min-width: 735px) { */
+  /* #frame .content .messages ul li p { */
+    /* max-width: 350px; */
+  /* } */
+/* } */
+/* @media screen and (min-width: 900px) { */
+  /* #frame .content .messages ul li p { */
+    /* max-width: 450px !important; */
+  /* } */
+/* } */
 #frame .content .message-input {
   position: absolute;
   bottom: 0;
@@ -684,7 +710,11 @@ body {
 }
 
 /* first time pulse profile */
+.hidden {
+  display: none;
+}
 .pulse{
+  color: #ffc107;
   box-shadow: 0 0 0 0 rgba(232, 76, 61, 0.7);
   /* background-color: #e84c3d; */
   -webkit-animation: pulse 1.25s infinite cubic-bezier(0.1, 0, 0, 0.1);
